Exercise 05 - Overlay, check out Project "18_FrameBuffers"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "iostream": "cpp",
         "vector": "cpp",
         "bitset": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "sstream": "cpp"
     }
 }
